[gd_scene load_steps=2 format=3 uid="uid://cx6g0e2r5k2u5"]

[ext_resource type="Script" uid="uid://d3vk6u6u6u6u6" path="res://scripts/ui/warp_page.gd" id="1_warp"]

[node name="WarpPage" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_warp")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -200.0
offset_right = 250.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Header" type="VBoxContainer" parent="VBox"]
layout_mode = 2

[node name="Label" type="Label" parent="VBox/Header"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "WARP CORE TERMINAL"
horizontal_alignment = 1

[node name="ShardCount" type="Label" parent="VBox/Header"]
layout_mode = 2
theme_override_colors/font_color = Color(0.721569, 0.45098, 1, 1)
theme_override_font_sizes/font_size = 18
text = "EXOTIC MATTER: 0.0 Shards"
horizontal_alignment = 1

[node name="ShardDesc" type="Label" parent="VBox/Header"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.6, 0.8, 1)
theme_override_font_sizes/font_size = 12
text = "Global Buff: +0% Production, +0% Combat Speed"
horizontal_alignment = 1

[node name="WarpCore" type="PanelContainer" parent="VBox"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2

[node name="Status" type="VBoxContainer" parent="VBox/WarpCore"]
layout_mode = 2
alignment = 1

[node name="Title" type="Label" parent="VBox/WarpCore/Status"]
layout_mode = 2
text = "WARP READINESS"
horizontal_alignment = 1

[node name="PotentialGain" type="Label" parent="VBox/WarpCore/Status"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 1, 1, 1)
theme_override_font_sizes/font_size = 20
text = "Potential Gains: +0 Shards"
horizontal_alignment = 1

[node name="Note" type="Label" parent="VBox/WarpCore/Status"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.4, 0.4, 1)
theme_override_font_sizes/font_size = 11
text = "Resets: Credits, Buildings, Standard Resources
Keeps: Research, Ships, Exotic Materials"
horizontal_alignment = 1

[node name="HBox" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -100.0
offset_right = 150.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 20

[node name="BackBtn" type="Button" parent="HBox"]
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
text = " RETURN "

[node name="ExecuteBtn" type="Button" parent="HBox"]
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.721569, 0.45098, 1, 1)
text = " EXECUTE WARP "

[connection signal="pressed" from="HBox/BackBtn" to="." method="_on_back_btn_pressed"]
[connection signal="pressed" from="HBox/ExecuteBtn" to="." method="_on_execute_btn_pressed"]
